[package]
name = "RustSandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
native-dialog = "0.7.0"
raylib = "5.0.2"
raylib_interactive = "0.1.4"
serde_json = "1.0.133"

[lib]
name = "rust_sandbox_lib"
path = "src/lib.rs"

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }

[target.x86_64-pc-windows-msvc.dependencies]
windows = "0.58.0"

[target.'cfg(windows)'.dependencies]

windows = "0.58.0"
